# 3DprintingDigitalTwin

./: .gitignore  ACCEPTANCE_TEST.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_STRUCTURE.md  README.md  README_CHINESE_FONT.md  SETUP_COMPLETE.md  environment.yml  pyproject.toml  requirements.txt  run_tests.sh  setup.py  verify_chinese_font.py
config/: __init__.py  config_loader.py  default_config.yaml  logger.py  matplotlibrc
control/: __init__.py
docs/: CHINESE_FONT_TROUBLESHOOTING.md  api_reference.md  joint_validation.md  quickstart.md  research_roadmap.md
examples/: README.md  demo_chinese_plot.py  diagnose_chinese_font.py  simple_simulation.py  verify_install.py
matlab/: README.md
rl/: __init__.py
sim/: __init__.py
tests/: README.md  test_chinese_plotting.py  test_config.py
utils/: __init__.py  clear_matplotlib_cache.py  font_installer.py  plot_config.py
